--- a/emnlp2014/phrase_based_sentiment_analysis.tex
+++ b/emnlp2014/phrase_based_sentiment_analysis.tex
@@ -28,7 +28,7 @@
 % in the camera-ready version and ask you to change it back.
 
 
-\title{Instructions for ACL-2014 Proceedings}
+\title{Phrase based Sentiment Analysis}
 
 \author{First Author \\
   Affiliation / Address line 1 \\
@@ -41,18 +41,23 @@
   Affiliation / Address line 3 \\
   {\tt email@domain} \\}
 
+\author{Nikhilkumar Jadhav \\
+  Masters Student \\
+  Computer Science \& Engg. Dept. \\
+  IIT Bombay \\
+  {\tt nikhilkumar@cse.iitb.ac.in} \\\And
+  Pushpak Bhattacharyya \\
+  Professor \\
+  Computer Science \& Engg. Dept. \\
+  IIT Bombay \\
+  {\tt pb@cse.iitb.ac.in} \\}
+
 \date{}
 
 \begin{document}
 \maketitle
 \begin{abstract}
-  This document contains the instructions for preparing a camera-ready
-  manuscript for the proceedings of ACL-2014. The document itself
-  conforms to its own specifications, and is therefore an example of
-  what your manuscript should look like. These instructions should be
-  used for both papers submitted for review and for final versions of
-  accepted papers.  Authors are asked to conform to all the directions
-  reported in this document.
+  
 \end{abstract}
 
 \section{Credits}
